[package]
name = "RustRoverDemo"
version = "0.1.0"
authors = ["Erik Dreyer <erik.dreyer314@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono", "128-column-tables", "r2d2", "returning_clauses_for_sqlite_3_35"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = { version = "2.1.0" }
regex = "1"
lazy_static = "1.4.0"
rand = "0.8.5"
strum = { version = "0.26.1", features = ["derive"] }
